--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "int", "CACHETIME", "432000" // 5days
+        buildConfigField "int", "LIMIT", "100"
+        buildConfigField "String", "COUNTRY", "\"EN\""
+        buildConfigField "String", "BASEURL", "\"http://188.166.190.210/API_SS_NEW/public/index.php/\""
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
