--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,8 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     debugCompile 'com.amitshekhar.android:debug-db:0.4.0'
+
+    compile 'com.synnapps:carouselview:0.1.4'
 }
 //
 //
