Create fragment for my request and my trip

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             android:name=".activity.login.LoginScreenActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"></activity>
         <activity android:name=".activity.home.HomeScreenActivity" />
+        <activity android:name=".activity.showallcountry.ShowAllCountriesActivity"/>
     </application>
 
 </manifest>
