add Country data model dao inject dao

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,10 @@ android {
     }
 }
 
-//greendao {
-//    targetGenDir 'src/main/java'
-//    schemaVersion 1
-//}
+greendao {
+    targetGenDir 'src/main/java'
+    schemaVersion 1
+}
 
 
 dependencies {
