add request data model save all request data into db prepare file for detail request prepare file for show all request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".activity.home.HomeScreenActivity" />
         <activity android:name=".activity.showallcountry.ShowAllCountriesActivity"/>
         <activity android:name=".activity.addnewrequest.AddNewRequestActivity"/>
+        <activity android:name=".activity.showallrequest.ShowAllRequestActivity"/>
     </application>
 
 </manifest>
